[package]
name = "leaves-rs"
version = "0.0.1"
description = "🌿 Leaves is a library implementing prediction code GBRT (Gradient Boosting Regression Trees) for inference models from popular ML-frameworks on Pure Rust 🦀"
keywords = [
    "deep-learning",
    "inference",
    "gradient-boosting",
    "lightgbm",
    "xgboost",
    "catboost",
    "scikit-learn",
    "machine-learning",
    "ai",
    "ml",
]
repository = "https://github.com/mirecl/leaves-rs"
authors = ["Grazhdankov Andrei <grazhdankov@gmail.com>"]
readme = "README.md"
categories = ["science", "algorithms", "mathematics"]
license = "MIT"
edition = "2021"

[lib]
name = "leaves"
path = "src/lib.rs"

[dependencies]
